--- a/src/App.sass
+++ b/src/App.sass
@@ -20,6 +20,7 @@ html
 *
   font-family: 'Roboto Slab', serif
   text-align: center
+  color: white
 
 .container
   position: relative
@@ -40,7 +41,6 @@ html
   flex-direction: row
 
 .header
-  color: white
   font-size: 100px
   font-weight: 200
   margin: 10px
@@ -48,21 +48,45 @@ html
 .links
   overflow: hidden
   animation: slidein 1s
+  margin: 8px 0
 
 .links a
-  color: white
   padding: 10px
   font-weight: 300
-  font-size: 20px
+  font-size: 18px
   text-decoration: none
 
 .links a:hover
   text-decoration: underline
 
+.projects h2
+  margin: 10px auto 0
+  font-weight: 400
+
+.projects p
+  font-size: 18px
+  margin: 5px 0
+
+.projects div
+  margin: 15px 0
+
+.projects a
+  text-decoration: none
+
+.projects a:hover
+  text-decoration: underline
+
+.projects hr
+  border: 0
+  height: 2px
+  margin: 15px 0
+  position: relative
+  background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 10%,rgba(255,255,255,0.65) 50%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%)
+
 .navbar
   bottom: 0
   position: fixed
-  margin: 30px auto
+  margin: 10px auto
   width: 60%
 
 .navbar a
@@ -76,11 +100,9 @@ html
   background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 10%,rgba(255,255,255,0.65) 50%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%)
 
 .skills
-  color: white
   font-size: 20px
 
 .titleText
-  color: white
   font-size: 24px
 
 @keyframes slidein
