--- a/src/App.sass
+++ b/src/App.sass
@@ -52,9 +52,10 @@ html
 
 .links a
   padding: 10px
-  font-weight: 300
-  font-size: 18px
+  font-weight: 400
+  font-size: 20px
   text-decoration: none
+  color: mediumorchid
 
 .links a:hover
   text-decoration: underline
@@ -62,16 +63,18 @@ html
 .projects h2
   margin: 10px auto 0
   font-weight: 400
+  font-size: 40px
 
 .projects p
-  font-size: 18px
+  font-size: 26px
   margin: 5px 0
 
 .projects div
-  margin: 15px 0
+  margin: 25px 0
 
 .projects a
   text-decoration: none
+  color: mediumorchid
 
 .projects a:hover
   text-decoration: underline
