--- a/src/App.sass
+++ b/src/App.sass
@@ -47,7 +47,7 @@ html
 
 .links
   overflow: hidden
-  animation: slidein 1s
+  animation: slideinX 1s ease-in 0s
   margin: 8px 0
 
 .links a
@@ -71,6 +71,7 @@ html
 
 .projects div
   margin: 25px 0
+  animation: slideinX 1s ease-in 0s
 
 .projects a
   text-decoration: none
@@ -108,10 +109,18 @@ html
 .titleText
   font-size: 24px
 
-@keyframes slidein
+@keyframes slideinY
   from
     opacity: 0
-    transform: translateX(-400px)
+    transform: translateY(300px)
+  to
+    opacity: 1
+    transform: translateY(0px)
+
+@keyframes slideinX
+  from
+    opacity: 0
+    transform: translateX(-100px)
   to
     opacity: 1
     transform: translateX(0px)
