--- a/src/App.sass
+++ b/src/App.sass
@@ -14,7 +14,6 @@ html
   height: 100%
   background: radial-gradient(ellipse at bottom, #141842 0%, black 100%)
   background-attachment: fixed
-  overflow: hidden
   margin: 0
 
 *
@@ -41,9 +40,9 @@ html
   flex-direction: row
 
 .header
-  font-size: 80px
+  font-size: 4em
   font-weight: 200
-  margin: 20px
+  margin: 8px
 
 .links
   overflow: hidden
@@ -65,7 +64,6 @@ html
 
 .navbar
   bottom: 0
-  position: fixed
   margin: 10px auto
   width: 80%
 
@@ -75,10 +73,15 @@ html
 .projects h2
   margin: 10px auto 0
   font-weight: 400
-  font-size: 30px
+  font-size: 24px
+
+.projects h3
+  font-size: 18px
+  font-weight: 400
+  margin: .5em
 
 .projects p
-  font-size: 22px
+  font-size: 14px
   margin: 5px 0
 
 .projects div
@@ -105,10 +108,10 @@ html
   background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 10%,rgba(255,255,255,0.65) 50%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%)
 
 .titleText
-  font-size: 20px
+  font-size: 16px
 
 .skills
-  font-size: 18px
+  font-size: 14px
 
 @media (min-width: 642px)
   .container
@@ -144,8 +147,13 @@ html
     font-weight: 400
     font-size: 40px
 
+  .projects h3
+    font-size: 20px
+    font-weight: 400
+    margin: .5em
+
   .projects p
-    font-size: 26px
+    font-size: 16px
     margin: 5px 0
 
   .projects div
@@ -215,12 +223,13 @@ html
   height: 1px
   background: transparent
   box-shadow: $shadows-small
-  animation: animStar 50s linear infinite
+  animation: animStar 100s linear infinite
 
   &:after
     content: " "
     position: absolute
     bottom: 2000px
+    overflow: hidden
     width: 1px
     height: 1px
     background: transparent
@@ -231,12 +240,13 @@ html
   height: 2px
   background: transparent
   box-shadow: $shadows-medium
-  animation: animStar 100s linear infinite
+  animation: animStar 125s linear infinite
 
   &:after
     content: " "
     position: absolute
     bottom: 2000px
+    overflow: hidden
     width: 2px
     height: 2px
     background: transparent
@@ -253,6 +263,7 @@ html
     content: " "
     position: absolute
     bottom: 2000px
+    overflow: hidden
     width: 3px
     height: 3px
     background: transparent
