navbar css tweaks, set navbar to fixed position at resolutions over 1240

--- a/src/App.sass
+++ b/src/App.sass
@@ -116,6 +116,13 @@ html
 .skills
   font-size: 14px
 
+@media (min-height: 1240px)
+  .navbar
+    bottom: 0
+    position: fixed
+    margin: 30px auto 10px
+    width: 60%
+
 @media (min-width: 642px)
   .container
     position: relative
@@ -187,9 +194,8 @@ html
 
   .navbar
     bottom: 0
-    overflow: hidden
-    position: fixed
-    width: 60%
+    margin-top: 50px
+    margin-bottom: 10px
 
   .navbar a
     margin: 0px 5px
